# servers/loanService/data/loan/accept.js
@@ -1,28 +1,0 @@
-'use strict';
-var Mockgen = require('../mockgen.js');
-/**
- * Operations on /loan/accept
- */
-module.exports = {
-    /**
-     * summary: This endpoint helps to add an bank account to the application.
-     * description: 
-     * parameters: loanAcceptDetails
-     * produces: 
-     * responses: 200
-     * operationId: 
-     */
-    post: {
-        200: function (req, res, callback) {
-            /**
-             * Using mock data generator module.
-             * Replace this by actual data for the api.
-             */
-            Mockgen().responses({
-                path: '/loan/accept',
-                operation: 'post',
-                response: '200'
-            }, callback);
-        }
-    }
-};
