# servers/loanService/data/loan/getAddressById.js
@@ -4,25 +4,24 @@ const readContractVariables = require('../lib/readContractVariables');
 const config = require("../config/config.json");
 
 const web3 = new Web3(new Web3.providers.HttpProvider(config.geth.url));
+
 /**
- * Operations on /loan/request
+ * Operations on /loan/getAddressById
  */
 module.exports = {
     /**
-     * summary: This endpoint helps to add an request loan.
+     * summary: This endpoint gives the number of loan taken till now.
      * description: 
-     * parameters: loanDetails
+     * parameters: Id
      * produces: 
      * responses: 200
      * operationId: 
      */
-    post: {
+    get: {
         200: function (req, res, callback) {
-            const signedTx = req.payload.signedTx;
+            const id = req.query.Id;
 
-            web3.eth.sendSignedTransaction(signedTx).on('receipt', (receipt) => {
-                callback(null, receipt);
-            });
+            readContractValues.getAddressById(web3, id, callback);
         }
     }
 };
